--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -34,12 +34,58 @@
  * For more details, see https://docs.gradle.org/8.0.1/userguide/java_library_plugin.html#sec:java_library_configurations_graph
  */
 dependencies {
-    api('com.github.GTNewHorizons:GT5-Unofficial:5.09.44.68:dev')
-    implementation('com.github.GTNewHorizons:bartworks:0.8.9:dev')
-    implementation('com.github.GTNewHorizons:AE2FluidCraft-Rework:1.1.56-gtnh-pre:dev')
-    implementation('com.github.GTNewHorizons:GTplusplus:1.10.22-pre:dev')
-    implementation('com.github.GTNewHorizons:GoodGenerator:0.7.5:dev')
-    implementation('com.github.GTNewHorizons:GTNH-Lanthanides:0.11.2:dev')
-    implementation('com.github.GTNewHorizons:TecTech:5.3.9:dev')
-    implementation('com.github.GTNewHorizons:NewHorizonsCoreMod:2.2.31-pre:dev')
+    // 因为hodgepodge的mixin和NHCoreMod(DreamCoreMod)有部分冲突, 使用mixinDebug会报错,具体原因不说
+    // 在hodgepodge最近的版本是修复了的 具体参考 https://github.com/GTNewHorizons/Hodgepodge/pull/494
+    // 顺便说下supersolarpanels就包含了advsolar的依赖 只用声明一次就行了
+    //    implementation rfg.deobf('curse.maven:advsolar-362768:2885953')
+
+api('com.github.GTNewHorizons:GT5-Unofficial:5.09.51.418:dev')
+    implementation("com.github.GTNewHorizons:Mobs-Info:0.5.3-GTNH:dev") { transitive = false }
+    implementation("com.github.GTNewHorizons:Infernal-Mobs:1.10.2-GTNH:dev")
+    implementation("com.github.GTNewHorizons:Galaxy-Space-GTNH:1.1.116-GTNH:dev")
+    implementation('com.github.GTNewHorizons:SGCraft:1.4.5-GTNH:dev')
+    implementation('com.github.GTNewHorizons:twilightforest:2.7.8:dev')
+//    implementation('com.github.GTNewHorizons:amunra:0.8.2:dev')
+    implementation('com.github.GTNewHorizons:Angelica:1.0.0-beta53:dev')
+    implementation('com.github.GTNewHorizons:worldedit-gtnh:v0.0.8:dev')
+    implementation('com.github.GTNewHorizons:AE2FluidCraft-Rework:1.4.106-gtnh:dev')
+    implementation('com.github.GTNewHorizons:ae2stuff:0.9.6-GTNH:dev')
+    implementation('com.github.GTNewHorizons:Avaritia:1.70:dev')
+    implementation('com.github.GTNewHorizons:Avaritiaddons:1.9.0-GTNH:dev')
+    implementation('com.github.GTNewHorizons:neiaddons:1.16.0:dev')
+//    implementation('com.github.GTNewHorizons:NotEnoughCharacters:1.7.10-1.5.4-GTNH:dev')
+//    implementation('com.github.GTNewHorizons:Et-Futurum-Requiem:2.6.2.21-GTNH-daily:dev')
+    implementation('com.github.GTNewHorizons:Binnie:2.5.16:dev')
+    implementation('com.github.GTNewHorizons:BloodMagic:1.7.48:dev')
+    implementation('com.github.GTNewHorizons:Botania:1.12.21-GTNH:dev')
+    implementation('com.github.GTNewHorizons:Draconic-Evolution:1.4.24-GTNH:dev')
+    implementation('com.github.GTNewHorizons:Electro-Magic-Tools:1.6.11:dev')
+    implementation('com.github.GTNewHorizons:EnderIO:2.9.22:dev')
+    implementation('com.github.GTNewHorizons:Eternal-Singularity:1.2.1:dev')
+    implementation('com.github.GTNewHorizons:ForestryMC:4.10.16:dev')
+    implementation('com.github.GTNewHorizons:MagicBees:2.9.4-GTNH:dev')
+    implementation('com.github.GTNewHorizons:NewHorizonsCoreMod:2.7.232:dev')
+    implementation('com.github.GTNewHorizons:NotEnoughItems:2.7.69-GTNH:dev')
+    implementation('com.github.GTNewHorizons:OpenComputers:1.11.16-GTNH:dev')
+    implementation('com.github.GTNewHorizons:supersolarpanels:1.1.4:dev')
+    implementation('com.github.GTNewHorizons:ThaumicEnergistics:1.7.11-GTNH:dev')
+    implementation('com.github.GTNewHorizons:Universal-Singularities:8.10.0:dev')
+    implementation('com.github.GTNewHorizons:WitcheryExtras:1.3.1:dev')
+    implementation('org.apache.logging.log4j:log4j-api:2.17.0')
+    implementation('org.apache.logging.log4j:log4j-core:2.17.0')
+    implementation('thaumcraft:Thaumcraft:1.7.10-4.2.3.5a:dev')
+    runtimeOnlyNonPublishable('com.github.GTNewHorizons:BetterP2P:1.3.1:dev')
+    runtimeOnlyNonPublishable('com.github.GTNewHorizons:Chisel:2.16.8-GTNH:dev')
+    runtimeOnlyNonPublishable('com.github.GTNewHorizons:StructureLib:1.4.15:dev')
+
+    implementation('com.google.auto.value:auto-value-annotations:1.10.1')
+    annotationProcessor('com.google.auto.value:auto-value:1.10.1')
+
+    runtimeOnlyNonPublishable("com.github.GTNewHorizons:BlockRenderer6343:1.3.16:dev") { transitive = false }
+    configurations.configureEach {
+
+    exclude group: 'com.github.GTNewHorizons', module: 'Baubles'
+
+    }
+
 }
